name:           cabal-list-outdated
version:        0.1
license:        BSD3
license-file:   LICENSE
author:         Ozgur Akgun
maintainer:     ozgurakgun@gmail.com
category:       Distribution
build-type:     Simple
cabal-version:  >=1.2

executable cabal-list-outdated
    main-is: Main.hs
    build-depends: base, parsec == 3.*, mtl == 2.*
